<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sattler.greg.cs449.studygroup.db.CreateTaskActivity"
    android:nestedScrollingEnabled="true"
    android:background="#ffffff">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskName"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:maxLength="30"
        android:maxLines="1"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/taskName"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/className"
        android:id="@+id/textViewClass"
        android:layout_below="@+id/taskName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:paddingBottom="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/className"
        android:maxLines="1"
        android:maxLength="30"
        android:layout_below="@+id/textViewClass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/due_date"
        android:id="@+id/textViewDueDate"
        android:editable="true"
        android:typeface="normal"
        android:paddingBottom="20dp"
        android:paddingTop="50dp"
        android:layout_below="@+id/className"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/savebutton"
        style="@style/Base.V23.Theme.AppCompat.Light"
        android:background="#00b7ff"
        android:textColor="#ffffff"
        android:typeface="normal"
        android:textSize="20sp"
        android:elegantTextHeight="false"
        android:elevation="25dp"
        android:enabled="true"
        android:onClick="onDoneButtonClick"
        android:layout_alignTop="@+id/cancelbutton"
        android:layout_alignParentEnd="true"
        android:minWidth="150dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dueDate"
        android:autoText="true"
        android:layout_below="@+id/textViewDueDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/dueDate"
        android:maxLength="10" />

    <Button
        style="@style/Base.V23.Theme.AppCompat.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/cancelbutton"
        android:background="#fb5f5a"
        android:textColor="#ffffff"
        android:typeface="normal"
        android:textSize="20sp"
        android:elegantTextHeight="false"
        android:elevation="25dp"
        android:enabled="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:minWidth="150dp" />

</RelativeLayout>
